src/webui/src/sass/_boxes.scss
$bar-colors: (
  blue: $blue,
  green: $green,
  purple: $purple,
  pink: $pink,
  black: $black,
);
@each $name, $color in $bar-colors {
   .sectionbox.#{$name}, .contentbox.#{$name} { background-color: hsla(hue($color),saturation($color),lightness($color),0.05); }
   .sectionbox.#{$name} {
     .sb.titlebar { background-color: hsla(hue($color),saturation($color),lightness($color),0.25); }
   }
   .contentbox.#{$name} .cb.titlebar { background-color: hsla(hue($color),saturation($color),lightness($color),0.50); }
   .#{$name} .sb-controls button, button.#{$name}, .#{$name} .sb-controls .dropdown { background-color: hsla(hue($color),saturation($color),lightness($color),0.5); color: white; }
   .#{$name} .sb-controls button:disabled, button.#{$name}:disabled { color: $color; border-color: hsla(hue($color),saturation($color),lightness($color),0.75); }
   .#{$name} .sb-controls button:hover:not([disabled]), button.#{$name}:hover:not([disabled]) { background-color: hsla(hue($color),saturation($color),lightness($color),0.75); }
}
.sectionbox .sb.titlebar { color: $black-50; }
.contentbox .cb.titlebar { color: $white-50; }

.sectionbox, .contentbox { display: flex; height: calc(100% - 0.7rem);
  .titlebar { display: flex; flex-direction: column; align-items: center; justify-content: flex-start; width: 2.8rem; min-width: 2.8rem; }
  .titlebar div { margin: 1.75rem 0; }
  .titlebar div ~ div { margin-top: 0; }
  .titlebar .title { font-family: $slim; transform: rotate(-180deg); writing-mode: vertical-lr; width: 2.8rem; line-height: 2.8rem; font-weight: 700; letter-spacing: 0.1rem; font-size: 1.3rem; text-transform: uppercase; white-space: nowrap;
    a { color: inherit; border-left: 1px dashed $white-50; border-bottom: none; }
    a:hover { border-left: 1px solid $white-50; border-bottom: none; }
  }
  .icon { transition: all 0.3s; width: 2.8rem; cursor: pointer; text-align: center;
    svg { width: 1.2rem; height: 1.2rem; transition: all 0.3s; }
  }
}

contentwrapper { display: flex; flex-direction: column; justify-content: center; height: 100%; }
@keyframes flexy { from { flex-wrap: wrap; } to { flex-wrap: nowrap; } }
.sectionbox { margin-bottom: 1.3rem;
  .sb-container { flex: 1; display: flex; flex-wrap: wrap; }
  .sb-body { margin-left: 1.3rem; padding: 1.3rem; flex-grow: 1; }
  .sb-controls { flex-basis: 100%; order: -1; padding: 1.65rem; padding-left: 2.95rem; transition: all 0.6s 0.3s;
    .dropdown:after { border-color: $white-75 transparent transparent transparent }
    .dropdown select { color: white; }
    &:empty { display: none; }
  }
  .sb.titlebar {
    .icon:hover svg { fill: $black-75; }
    .icon.modal-close { margin-bottom: 2.6rem;
      svg { stroke-width: 14%; width: 1rem; height: 1rem; }
    }
    .icon.collapser { margin-top: auto; }
  }
  &.collapsed {
    .sb-container { animation: flexy; animation-delay: 0.6s; animation-duration: 0s; animation-fill-mode: forwards; }
    .sb-controls { padding: 1.65rem; padding-top: 2.6rem; padding-left: 2.95rem; flex-basis: 75%; }
    .icon.collapser { transform: rotate(-90deg); }
  }
  section.buttons { display: flex; align-items: center; }
  section.buttons ~ section.comments { padding-top: 1.3rem; }
  section.comments {
    .control-comment ~ .control-comment textarea { margin-top: 1.3rem; }
  }
  h4.sb-notification { font-family: $full; color: $black-25; font-weight: 600; font-size: 1.5rem; text-transform: uppercase; letter-spacing: 0.075rem; }
}
.contentbox { margin: 0.35rem;
  .titlebar { justify-content: space-between; }
  .title { margin-right: 0.025rem; }
  .cb-body { padding: 1.3rem; width: 100%; transform: scaleX(1); opacity: 1; transform-origin: left; transform-style: flat; transition: all 0.6s; white-space: nowrap; }
  .title { color: white; }
  h5, p { font-size: 1.4rem; color: black; }
  .exac p { padding-right: 2.6rem; }
  h5 { font-weight: 400; padding-right: 2.6rem; margin: 0.2rem 0; white-space: pre; letter-spacing: -0.04rem; }
  h4 { font-weight: 500; font-size: 1.25rem; padding-right: 2.6rem; margin: 0.2rem 0; white-space: pre; letter-spacing: -0.04rem; text-transform: uppercase; }
  h4.faded-title { opacity: 0.5; }
  h5.wrap { white-space: normal; }
  h5.normaltext { padding-right: 0; }
  p { font-weight: 300; word-wrap: break-word; word-break: break-word; }
  ul { font-size: 1.2rem; padding: 0; margin: 0.7rem 2rem; margin-bottom: 1.3rem; }
  .comment-title { width: 15rem; }
  .cell + .cell button { margin-left: 6.5rem; }
  .icon:hover svg { fill: $white; }
  .icon.collapsed { transform-style: preserve-3d; transform: rotateY(180deg); }
}
.contentbox.collapsed .cb-body { transform: scaleX(0);  opacity: 0; max-width: 0 !important; max-height: 0; overflow: hidden; padding: 0; white-space: nowrap; } // display: inline-flex;

// no-content styling
.no-content.contentbox { background-color: $black-25;
  .cb.titlebar { background-color: Transparent; }
  .cb-body { padding: 0; }
  .icon { display: none; }
}

.sectionbox-content { display: flex; flex-wrap: wrap; }

// Edge cases
section.buttons .ref-title { padding-right: 1.3rem; }
.modal .sectionbox .sb-controls section.buttons { justify-content: space-between; }
.reference-layout { display: flex; align-items: center; justify-content: space-between; }
.reference-layout ~ .reference-layout { margin-top: 0.7rem; }

